gcc/testsuite/g++.old-deja/g++.pt/enum5.C
// { dg-do assemble  }

template <>
enum E {e}; // { dg-error "" } template declaration of enum
